--- a/Report/05-methodology.tex
+++ b/Report/05-methodology.tex
@@ -1,6 +1,6 @@
 \chapter{Experimental methodology}\label{ch:methodology}
 
-In this section we describe the exact methods used to run the experiments. Multiple experiments were run. To answer questions Q1 and Q3 we trained all three systems on a set of random, intelligent and mixed quality traces. To answer Q2 we trained the systems on a varying number of mixed quality traces.
+In this section we describe the exact methods used to run the experiments. Multiple experiments were run. To answer questions Q1 and Q3 experiment E1 was carried out in which three systems were trained on a set of random, intelligent and mixed quality traces. To answer Q2 experiment E2 was carried out in which the systems were trained on a varying number of mixed quality traces.
 \section{Materials}
 \subsubsection{Generating training data}
 The training data was generated according to the methods described in chapter \ref{ch:traces}. To generate the game traces the Sancho version 1.61 was used\cite{Sancho/Github}. The only modifications made to this were the changes to the logging system. Extra code was added to record the legal moves, the goal values at each state and the names of the players. Sancho was run through the GGP-base framework, a codebase developed by the general game playing community for hosting matches between GGP agents\footnote{https://github.com/ggp-org/ggp-base}.
@@ -42,9 +42,13 @@ The systems were run concurrently in both training and testing.
 \section{Methods}
 \subsection{Training}
 
-Each system was given 15 minutes to generate a hypothesis for each predicate. If the predicate was not learned the default hypothesis was \textit{true}. The ILP systems were trained on 8 full game traces in answering questions Q1 and Q3. To train the system on the mixed dataset a 50/50 mix of random and intelligent traces were added to the training set. To answer Q2 we trained each system on 8,16 and 24 mixed traces. It was found that the results for 16 and 24 traces were very similar across all systems so no larger training sets were tested.
+Each system was given 15 minutes to generate a hypothesis for each predicate. If the predicate was not learned the default hypothesis was \textit{true}. 
 
-In the IGGP paper\cite{Cropper/IGGP} the IGGP task was defined across four predicates for each game: \textit{goal}, \textit{next}, \textit{terminal} and \textit{legal}. After testing the systems on all four predicates it was found that the terminal predicates did not give an accurate picture into the ability to learn of each system. Each game had a maximum number of moves, these varied from game to game. Generally the randomly generated game traces did not complete the game before the move limit was reached. Since the terminal predicate is true on the last game state in each game and the game state includes a move counter this allowed the systems to simply learn the correlation between the maximum move and the terminal predicate. They would learn the program: \verb|terminal :- true_step(MAX)| where \verb|MAX| is the maximum number of moves for the game. This means that when a game is played randomly and the max move count is always hit the predicate is perfectly solved, however if when Sancho plays then game it solves it before the maximum moves is hit it is less likely to induce a correct rule. For this reason the \textit{terminal} predicate was left out of training data.
+In \textbf{E1} The ILP systems were trained on 8 full game traces. They were each trained on intelligent random and mixed traces. The mixed traces were made up of a 50/50 mix of random and intelligent traces. 
+
+In \textbf{E2} we trained each system on 8, 16 and 24 mixed traces where each set was made up of a 50/50 mix of random and intelligent traces. It was found that the results for 16 and 24 traces were very similar across all systems so no larger training sets were tested.
+
+In the IGGP paper\cite{Cropper/IGGP} the IGGP task was defined across four predicates for each game: \textit{goal}, \textit{next}, \textit{terminal} and \textit{legal}. After testing the systems on all four predicates it was found that the terminal predicates did not give an accurate picture into the ability to learn of each system. Each game had a maximum number of moves, these varied from game to game. Generally the randomly generated game traces did not complete the game before the move limit was reached. Since the terminal predicate is true on the last game state in each game and the game state includes a move counter this allowed the systems to simply learn the correlation between the maximum move and the terminal predicate. They would learn the program: \verb|terminal :- true_step(MAX)| where \verb|MAX| is the maximum number of moves for the game. Since when a game is played randomly the max move count is almost always hit the predicate is often perfectly solved. However if when Sancho plays then game it solves it before the maximum move count is hit it is less likely to induce a correct rule. For this reason the \textit{terminal} predicate was not included in training data.
 
 \subsection{Testing}
 
