--- a/Report/project.bib
+++ b/Report/project.bib
@@ -615,3 +615,73 @@ journal = {Mathematical Spectrum}
 	eprint = {https://science.sciencemag.org/content/317/5844/1518.full.pdf},
 	journal = {Science}
 }
+@book{Uwe/Logic,
+	author = {Schoning, Uwe},
+	title = {Logic for Computer Scientists},
+	year = {2008},
+	isbn = {0817647627},
+	publisher = {Birkh\"{a}user Basel}
+}
+
+@article{AlphaGo,
+	author    = {David Silver and
+	Aja Huang and
+	Chris J. Maddison and
+	Arthur Guez and
+	Laurent Sifre and
+	George van den Driessche and
+	Julian Schrittwieser and
+	Ioannis Antonoglou and
+	Vedavyas Panneershelvam and
+	Marc Lanctot and
+	Sander Dieleman and
+	Dominik Grewe and
+	John Nham and
+	Nal Kalchbrenner and
+	Ilya Sutskever and
+	Timothy P. Lillicrap and
+	Madeleine Leach and
+	Koray Kavukcuoglu and
+	Thore Graepel and
+	Demis Hassabis},
+	title     = {Mastering the game of Go with deep neural networks and tree search},
+	journal   = {Nature},
+	volume    = {529},
+	number    = {7587},
+	pages     = {484--489},
+	year      = {2016},
+	url       = {https://doi.org/10.1038/nature16961},
+	doi       = {10.1038/nature16961},
+	timestamp = {Wed, 14 Nov 2018 10:30:42 +0100},
+	biburl    = {https://dblp.org/rec/journals/nature/SilverHMGSDSAPL16.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{Tesauro/Backgammon,
+	author    = {Gerald Tesauro},
+	title     = {Temporal Difference Learning and TD-Gammon},
+	journal   = {Commun. {ACM}},
+	volume    = {38},
+	number    = {3},
+	pages     = {58--68},
+	year      = {1995},
+	url       = {https://doi.org/10.1145/203330.203343},
+	doi       = {10.1145/203330.203343},
+	timestamp = {Wed, 14 Nov 2018 10:22:34 +0100},
+	biburl    = {https://dblp.org/rec/journals/cacm/Tesauro95.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{Ahlgren/Atom,
+	author    = {John Ahlgren and
+	Shiu Yin Yuen},
+	title     = {Efficient program synthesis using constraint satisfaction in inductive
+	logic programming},
+	journal   = {J. Mach. Learn. Res.},
+	volume    = {14},
+	number    = {1},
+	pages     = {3649--3682},
+	year      = {2013},
+	url       = {http://dl.acm.org/citation.cfm?id=2627674},
+	timestamp = {Wed, 10 Jul 2019 15:28:41 +0200},
+	biburl    = {https://dblp.org/rec/journals/jmlr/AhlgrenY13.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
