--- a/Report/00-abstract.tex
+++ b/Report/00-abstract.tex
@@ -1,22 +1,23 @@
 \begin{abstract}
 
 General Game Playing (GGP) is a framework in which an artificial intelligence program is required to play a variety of games successfully, it acts as a test bed for AI and motivator of research. The AI is given a random game description at runtime (such as checkers or tic tac toe) which it then plays.
-The framework includes repositories of these game descriptions written in a logic programming language.
+The framework includes repositories of game rules written in a logic programming language.
 
 
-The Inductive General Game Playing (IGGP) problem challenges machine learning systems to learn these GGP game rules by watching the game being played. In other words, IGGP is the problem of inducing general game rules from specific game observations. Inductive Logic Programming (ILP), a subsection of ML, has shown to be a promising approach to this problem though it has been shown that it is still a hard problem for ILP systems. In this regard IGGP motivates future research in ILP.
+The Inductive General Game Playing (IGGP) problem challenges machine learning systems to learn these GGP game rules by watching the game being played. In other words, IGGP is the problem of inducing general game rules from specific game observations. Inductive Logic Programming (ILP), a subsection of ML, has shown to be a promising approach to this problem though it has been demonstrated that it is still a hard problem for ILP systems. In this regard IGGP motivates future research in ILP.
 
-Existing work on IGGP has always assumed that the game player being observed makes random moves. This is not representative of how a human learns to play a game, to learn to play chess we watch someone who is playing to win. With random gameplay a lot situation that would normally be encountered  when humans play are not present. It may be the case that some games rules do not come into effect unless the game gets to a certain state such as castling in checkers or in connect 4 not being able to put a counter into a full column. Rules of games are designed with good play in mind so it would make sense that a good player of the game would invoke more cases of the rules.
+Existing work on IGGP has always assumed that the game player being observed makes random moves. This is not representative of how a human learns to play a game, to learn to play chess we watch someone who is playing to win. With random gameplay a lot situation that would normally be encountered  when humans play are not present. It may be the case that some games rules do not come into effect unless the game gets to a certain state such as castling in checkers. Rules of games are designed with good play in mind so it would make sense that a good player of the game would invoke more cases of the rules.
 
-To address this limitation, in this paper we analyse the effect of using optimal verses random gameplay traces as well as the effect of varying the number of traces in the training set.
+To address this limitation, we analyse the effect of using intelligent verses random gameplay traces as well as the effect of varying the number of traces in the training set.
 
 We use Sancho, the 2014 GGP competition winner, to generate optimal game traces for a large number of games.
 We then use the ILP systems, Metagol, Aleph and ILASP to induce game rules from the traces.
-We train and test the systems on all combinations of optimal and random data. We also vary the volume of training data.
+We train and test the systems on combinations of intelligent and random data including a mixture of both. We also vary the volume of training data.
 
-\ac{Our results show [can fill in later]}
+Our results show that whilst some games were learned more effectively in some of the experiments than others no overall trend was statistically significant. 
 
-\ac{The implications of this work are [can fill in later]}
+The implications of this work are that varying the quality of training data as described in this paper has strong effects on the accuracy of the learned game rules however one solution does not work for all games.
+
 
 
 
