--- a/Report/01-intro.tex
+++ b/Report/01-intro.tex
@@ -1,8 +1,7 @@
+\chapter{Introduction}\label{ch:intro}
+General Game Playing (GGP) is a framework in which artificial intelligence programs are required to play a large number of games successfully.\cite{Genesereth/GGPOverview}. Traditionally game playing AI have focused on a single game\cite{AlphaGo,DeepBlue,Schaeffer/Checkers,Tesauro/Backgammon}. Famous AI include programs such as IBMs deep blue which is able to beat grand masters at chess but is completely unable to play checkers \cite{DeepBlue}. These traditional AI also only do part of the work. A lot of the analysis of the game is often done outside of the system\cite{Schaeffer/Checkers}. A more interesting challenge is building AI that can play games without any prior knowledge. In GGP the AI are given the description of the rules of a game at runtime. Games in the framework range greatly in both number of players and complexity; from the single player Eight Puzzle to the six player Chinese Checkers, and from the relatively simple Rock Paper Scissors to Chess\cite{GGP-Website}. The progress in the field is consolidated annually at the GGP where participants compete to find the best GGP AI\cite{Genesereth/GGPOverview}.
 
-\chapter{Introduction}
-General Game Playing (GGP) is a framework in which artificial intelligence programs are required to play a large number of games successfully.\cite{Genesereth/GGPOverview}. Traditional game playing AI has focused on a single game. Famous AI such as IBMs deep blue is able to beat grand masters at chess but is completely unable to play checkers \cite{DeepBlue}. These traditional AI also only do part of the work. A lot of the analysis of the game is done outside of the system. A more interesting challenge is building AI that can play games without any prior knowledge. In GGP the AI are given the description of the rules of a game at runtime. Games in the framework range greatly in both number of players and complexity; from the single player Eight Puzzle to the six player Chinese Checkers, and from the relatively simple Rock Paper Scissors to Chess\cite{GGP-Website}. The progress in the field is consolidated annually at the GGP where participants compete to find the best GGP AI.
-
-The GGP framework includes a large database of games. In a GGP match games from these databases are selected at random and sent to the competitors. The games are specified in the Game Description Language (GDL), a logic programming language built for describing games as state machines\cite{GDL_Spec}. A logic programming language being any that is mainly based on formal logic, such as Prolog. An example of GDL rules is given in listing \ref{lst:GDL}.
+The GGP framework includes a large database of games. In a GGP match games from these databases are selected at random and sent to the competitors\cite{Genesereth/GGPOverview}. The games are specified in the Game Description Language (GDL), a logic programming language built for describing games as state machines\cite{GDL_Spec}. A logic programming language being any that is mainly based on formal logic, such as Prolog (see section \ref{sec:prolog}). An example of GDL rules is given in listing \ref{lst:GDL}.
 
 
 \begin{figure}[ht]
@@ -36,7 +35,7 @@ A sample of rules from the GDL description of Rock Paper Scissors. The $?$ indic
 
 
 
-These GDL game descriptions form the basis for the Inductive General Game Playing (IGGP) problem\cite{Cropper/IGGP}. The task is an inversion of the GGP problem. Rather than taking game rules and using them to play the game in IGGP the aim is to learn the rules from observations of gameplay, similar to how a human might work out the rules of a game by watching someone play it. Cropper et al. define the IGGP problem in their 2019 paper; given a set of gameplay observations the goal is to induce the rules of the game\cite{Cropper/IGGP}. The games used in IGGP are those from the GGP competition problem set, specified in GDL, meaning they are widely varied in complexity. An example IGGP for \textit{rock paper scissors} is given in table \ref{tab:IGGPTask} and the rules given for the GGP game description in table \ref{tab:GGP-RPS}
+These GDL game descriptions form the basis for the Inductive General Game Playing (IGGP) problem\cite{Cropper/IGGP}. The task is an inversion of the GGP problem. Rather than taking game rules and using them to play the game in IGGP the aim is to learn the rules from observations of gameplay, similar to how a human might work out the rules of a game by watching someone play it. Cropper et al. define the IGGP problem in their 2019 paper; given a set of gameplay observations the goal is to induce the rules of the game\cite{Cropper/IGGP}. The games used in IGGP are a selection of those from the GGP competition problem set, specified in GDL, meaning they are widely varied in complexity. An example IGGP for \textit{rock paper scissors} is given in table \ref{tab:IGGPTask} and the rules given for the GGP game description in table \ref{tab:GGP-RPS}
 
 \begin{table}[]
 	\centering
@@ -58,12 +57,12 @@ These GDL game descriptions form the basis for the Inductive General Game Playin
 	\label{tab:GGP-RPS}
 \end{table}
 
-An effective way of solving the IGGP problem is a form of machine learning: Inductive Logic Programming (ILP) \cite{Cropper/IGGP}. In ILP, the learner is tasked with learning logic programs given some background knowledge and a set of values for which the programs are true or false (also expressed in a logical programming language). In the IGGP paper \cite{Cropper/IGGP}, the authors showed through empirical evaluations that ILP systems achieve the best score in this task compared to other machine learning techniques. The ILP system derive a hypothesis, a logic program that when combined with the background knowledge, entails all of the positive and none of the negative examples\cite{Muggleton/ILP}. In the IGGP paper\cite{Cropper/IGGP} it is also shown that the problem is hard for current ILP systems, with on average only 40\% of the rules being learned by the best performing systems.
+An effective way of solving the IGGP problem is a form of machine learning: Inductive Logic Programming (ILP) \cite{Cropper/IGGP,Muggleton/ILP}. In ILP, the learner is tasked with learning logic programs given some background knowledge and a set of values for which the programs are true or false (also expressed in a logical programming language). In the IGGP paper, the authors showed through empirical evaluations that ILP systems achieve the best score in this task compared to other machine learning techniques\cite{Cropper/IGGP}. The ILP system derives a hypothesis, a logic program that when combined with the background knowledge entails all of the positive and none of the negative examples\cite{Muggleton/ILP}. In the IGGP paper it is also shown that the problem is hard for current ILP systems, with on average only 40\% of the rules being learned by the best performing systems\cite{Cropper/IGGP}.
 
-However, the existing work has limitations. All existing work has assumed that the gameplay being observed is randomly generated. Rather than agents playing to win they simply make moves at random. Often this has the result of the game terminating before it reaches a terminal state due to a cap on trace length or sections of the rule set remaining completely unused. In previous work there has also not been any research done to ascertain the effects that increasing the number of game observation has on the quality of the induced rules. It is unknown weather there is a threshold at which new any new game traces introduced are insignificant. In this paper we use the IGGP framework to evaluate the ability of ILP agents to correctly induce the rules of a game given different sets of gameplay observations - intelligent gameplay verses random gameplay as well as combinations of the two. To generate the intelligent gameplay we use the system Sancho, winner of the 2014 GGP competition\footnote{http://ggp.stanford.edu/iggpc/winners.php accessed 28th April 2020}. Every year the GGP competition includes a 'Carbon versus Silicone' event where humans pit themselves against the winner of the main competition. The machines almost always win\cite{Genesereth/GGPOverview} so we can assume Sancho has above amateur human level play. We also vary the number of gameplay traces from which the ILP systems learn.
+However, the existing work has limitations. All work so far has assumed that the gameplay being observed is randomly generated\cite{Cropper/IGGP}. Rather than agents playing to win they simply make moves at random. Often this has the result of the game terminating before it reaches a goal state due to a cap on trace length or sections of the rule set remaining completely unused. In previous work there has also not been any research done to ascertain the effects that increasing the number of game observation has on the quality of the induced rules. It is unknown whether there is a threshold at which new any new game traces introduced are insignificant. In this paper we use the IGGP framework to evaluate the ability of ILP agents to correctly induce the rules of a game given different sets of gameplay observations - intelligent gameplay verses random gameplay as well as combinations of the two. To generate the intelligent gameplay we use the system Sancho, winner of the 2014 GGP competition\footnote{http://ggp.stanford.edu/iggpc/winners.php accessed 28th April 2020}\cite{Sancho/Github}. Every year the GGP competition includes a 'Carbon versus Silicone' event where humans pit themselves against the winner of the main competition. The machines almost always win\cite{Genesereth/GGPOverview} so we can assume Sancho has above amateur human level play. We also vary the number of gameplay traces from which the ILP systems learn to determine the optimal number of traces.
 
 
-It is not obvious which of random or intelligent gameplay will achieve the best results. When learning the rules of chess would a human rather watch moves being made randomly, or a match between two grandmasters? It is not an easy question to answer. Both situations will result in a restricted view of the game, with certain situations never occurring in each one. This is not only a dilemma in the context of learning game rules. For example, teaching a self driving car to navigate roads requires training it on examples of driving. We would clearly not train it on highly intelligent Formula One quality driving and neither would we train it on random movement of the car. The question to be asked is what is the ideal level of training data to use to best teach a system the rules you want it to learn. In this paper, we try to help give some insight into this fundamental question. Specifically, we ask the following research questions:
+It is not obvious which of random or intelligent gameplay will achieve the best results. When learning the rules of chess would a human rather watch moves being made randomly, or a match between two grandmasters? It is not an easy question to answer. Both situations will result in a restricted view of the game, with certain situations never occurring in each one. This is not only a dilemma in the context of learning game rules. For example, teaching a self driving car to navigate roads requires training it on examples of driving. We would clearly not train it on highly intelligent Formula One quality driving and neither would we train it on random movement of the car. The question to be asked is what is the ideal quality level of training data to use to best teach a system the rules you want it to learn. In this paper, we try to help give some insight into this fundamental question. Specifically, we ask the following research questions:
 
 \begin{description}
 \item[Q1] Does varying the quality of game traces influence the ability for learners to solve the IGGP problems? Specifically, does the quality of game play affect predictive accuracy?
